#41 - Layout fixes - modified align-items to use flex in admin-navbar component

--- a/frontend/src/app/admin/admin-navbar/admin-navbar.component.css
+++ b/frontend/src/app/admin/admin-navbar/admin-navbar.component.css
@@ -28,14 +28,14 @@
   display: flex;
   flex-direction: column;
   justify-content: center;
-  align-items: start;
+  align-items: flex-start;
 }
 
 .last-section {
   display: flex;
   flex-direction: column;
   justify-content: center;
-  align-items: start;
+  align-items: flex-start;
 }
 
 @media (max-width: 770px) {
